# m2c

./: .gitignore  m2c.py  main.py  mdk2cmake.py  pyproject.toml  test.py  tool.py
test_data/: CMakeLists.txt  mdk_control_string.txt
test_data/MDK-ARM/: FOC.uvprojx  startup_stm32f405xx.s
